@@ -3,7 +3,6 @@ export(bfactor)
 export(boot.mirt)
 export(calcLogLik)
 export(confmirt)
-export(confmirt.model)
 export(createItem)
 export(expand.table)
 export(extract.item)
@@ -15,6 +14,7 @@ export(iteminfo)
 export(itemplot)
 export(key2binary)
 export(mirt)
+export(mirt.model)
 export(mirtCluster)
 export(mixedmirt)
 export(mod2values)
