@@ -25,8 +25,8 @@ test_that('three factor', {
     COV = F1*F2, F1*F3, F2*F3'
     
     #group models
-    model1 <- confmirt.model(MGmodelg1, quiet = TRUE)    
-    model2 <- confmirt.model(MGmodelg1, quiet = TRUE)    
+    model1 <- mirt.model(MGmodelg1, quiet = TRUE)    
+    model2 <- mirt.model(MGmodelg1, quiet = TRUE)    
     models <- list(D1=model1, D2=model2)    
     
     suppressWarnings(mod_metric <- multipleGroup(dat, models, group = group, invariance=c('slopes'), method = 'MHRM',
