@@ -38,11 +38,11 @@
   consists of numerically ordered data, with missing data
   coded as \code{NA}}
 
-  \item{model}{an object returned from
-  \code{confmirt.model()} declaring how the factor model is
-  to be estimated, or a single numeric value indicating the
-  number of exploratory factors to estimate. See
-  \code{\link{confmirt.model}} for more details}
+  \item{model}{an object returned from \code{mirt.model()}
+  declaring how the factor model is to be estimated, or a
+  single numeric value indicating the number of exploratory
+  factors to estimate. See \code{\link{mirt.model}} for
+  more details}
 
   \item{guess}{initial (or fixed) values for the
   pseudo-guessing parameter. Can be entered as a single
@@ -258,7 +258,7 @@ dataset <- simdata(a,d,2000,items,sigma)
 #analyses
 #CIFA for 2 factor crossed structure
 
-model.1 <- confmirt.model()
+model.1 <- mirt.model()
   F1 = 1-4
   F2 = 4-8
   COV = F1*F2
@@ -274,7 +274,7 @@ residuals(mod1)
 
 #####
 #bifactor
-model.3 <- confmirt.model()
+model.3 <- mirt.model()
   G = 1-8
   F1 = 1-4
   F2 = 5-8
@@ -292,12 +292,12 @@ data(SAT12)
 data <- key2binary(SAT12,
                   key = c(1,4,5,2,3,1,2,1,3,1,2,4,2,1,5,3,4,4,1,4,3,3,4,1,3,5,1,3,1,5,4,5))
 
-model.quad <- confmirt.model()
+model.quad <- mirt.model()
        F1 = 1-32
   (F1*F1) = 1-32
 
 
-model.combo <- confmirt.model()
+model.combo <- mirt.model()
        F1 = 1-16
        F2 = 17-32
   (F1*F2) = 1-8
@@ -342,7 +342,7 @@ itemplot(mod.combo, 2, type = 'infocontour')
 }
 \seealso{
   \code{\link{expand.table}}, \code{\link{key2binary}},
-  \code{\link{confmirt.model}}, \code{\link{mirt}},
+  \code{\link{mirt.model}}, \code{\link{mirt}},
   \code{\link{confmirt}}, \code{\link{bfactor}},
   \code{\link{multipleGroup}}, \code{\link{mixedmirt}},
   \code{\link{wald}}, \code{\link{itemplot}},
