@@ -19,10 +19,9 @@
   \code{nrow(data)} by \code{K} 'person level' fixed and
   random predictors}
 
-  \item{model}{an object returned from
-  \code{confmirt.model()} declaring how the factor model is
-  to be estimated. See \code{\link{confmirt.model}} for
-  more details}
+  \item{model}{an object returned from \code{mirt.model()}
+  declaring how the factor model is to be estimated. See
+  \code{\link{mirt.model}} for more details}
 
   \item{fixed}{a right sided R formula for specifying the
   fixed effect (aka 'explanatory') predictors from
@@ -130,7 +129,7 @@ library(parallel)
 mirtCluster(detectCores())
 
 #specify IRT model
-model <- confmirt.model('Theta = 1-10')
+model <- mirt.model('Theta = 1-10')
 
 #model with no person predictors
 mod0 <- mirt(data, model, itemtype = 'Rasch')
@@ -175,7 +174,7 @@ tail(withoutint$X)
 data(SAT12)
 data <- key2binary(SAT12,
                    key = c(1,4,5,2,3,1,2,1,3,1,2,4,2,1,5,3,4,4,1,4,3,3,4,1,3,5,1,3,1,5,4,5))
-model <- confmirt.model('Theta = 1-32')
+model <- mirt.model('Theta = 1-32')
 
 itemdesign <- data.frame(itemorder = factor(c(rep('easier', 16), rep('harder', 16))))
 
