@@ -37,11 +37,10 @@
   coded as \code{NA}}
 
   \item{model}{an object or named list of objects returned
-  from \code{confmirt.model()} declaring how the factor
-  model is to be estimated. The names of the list input
-  must correspond to the unique values in the \code{group}
-  variable. See \code{\link{confmirt.model}} for more
-  details}
+  from \code{mirt.model()} declaring how the factor model
+  is to be estimated. The names of the list input must
+  correspond to the unique values in the \code{group}
+  variable. See \code{\link{mirt.model}} for more details}
 
   \item{group}{a character vector indicating group
   membership}
@@ -196,7 +195,7 @@ dataset1 <- simdata(a, d, N, itemtype)
 dataset2 <- simdata(a, d, N, itemtype, mu = .1, sigma = matrix(1.5))
 dat <- rbind(dataset1, dataset2)
 group <- c(rep('D1', N), rep('D2', N))
-models <- confmirt.model('F1 = 1-15')
+models <- mirt.model('F1 = 1-15')
 
 mod_configural <- multipleGroup(dat, models, group = group) #completely separate analyses
 
@@ -276,7 +275,7 @@ dat <- rbind(dataset1, dataset2)
 group <- c(rep('D1', N), rep('D2', N))
 
 #group models
-model <- confmirt.model()
+model <- mirt.model()
    F1 = 1-5
    F2 = 6-10
    F3 = 11-15
@@ -323,8 +322,8 @@ dataset1 <- simdata(a, d, N, itemtype)
 dataset2 <- simdata(a, d, N, itemtype, mu = .1, sigma = matrix(1.5))
 dat <- rbind(dataset1, dataset2)
 group <- c(rep('D1', N), rep('D2', N))
-models <- confmirt.model('F1 = 1-15')
-models2 <- confmirt.model('
+models <- mirt.model('F1 = 1-15')
+models2 <- mirt.model('
    F1 = 1-10
    F2 = 10-15')
 
@@ -350,7 +349,7 @@ itemplot(mod_configural2, 10)
 }
 \seealso{
   \code{\link{expand.table}}, \code{\link{key2binary}},
-  \code{\link{confmirt.model}}, \code{\link{mirt}},
+  \code{\link{mirt.model}}, \code{\link{mirt}},
   \code{\link{confmirt}}, \code{\link{bfactor}},
   \code{\link{multipleGroup}}, \code{\link{mixedmirt}},
   \code{\link{wald}}, \code{\link{itemplot}},
